<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SPOTr</string>
    <!-- login.xml -->
    <string name="login_xml_textview_email_str">Login (usually email)</string>
    <string name="login_xml_textview_password_str">Password</string>
    <string name="login_xml_checkbox_remember_password_str">Remember password</string>
    <string name="login_xml_checkbox_visible_password_str">Show visible password</string>
    <string name="login_xml_button_login_str">Log In</string>
    <string name="login_xml_button_signup_str">Sign Up</string> 
    <string name="login_xml_textview_version_str">V1.0</string>
    <string name="login_xml_hyperlink_signup_str"><a href="http://107.22.209.62/web_app/register.php">Sign Up</a></string>
        
    <!-- signup.xml - Tu Tran 11/9/2011-->
    <string name="signup_xml_textview_email_str">Email</string>
    <string name="signup_xml_textview_password_str">Password</string>
    <string name="signup_xml_textview_confirmpassword_str">Confirm password</string>
    <string name="signup_xml_button_signup_str">Sign Up</string>
    <string name="signup_xml_checkbox_visible_characters_str">Show visible password</string>
    <string name="signup_xml_button_exit_str">Exit</string>        
    <!-- mapview.xml -->
    <string name="mapview_xml_button_view_str">View</string>
    <string name="mapview_xml_button_locate_str">Locate</string>
    <string name="mapview_xml_button_place_str">Places</string>
    
    <!-- main_menu.xml -->
    <string name="main_menu_xml_button_profile_str">Profile</string>    
    <string name="main_menu_xml_button_rewards_str">Rewards</string>    
    <string name="main_menu_xml_button_leader_board_str">Leaderboards</string>
    <string name="main_menu_xml_button_friend_str">Friends</string>
    <string name="main_menu_xml_button_challenge_str">Challenges</string>
    <string name="main_menu_xml_button_spot_str">Spots</string>    
    <string name="main_menu_xml_slider_notification_str">Notifications</string>
    
    <!-- options_menu.xml -->
    <string name="options_menu_xml_item_logout_str">Logout</string>
    <string name="options_menu_xml_item_setting_str">Settings</string>    
        
    <!-- settings.xml -->
    <string name="settings_xml_checkbox_str">Share your Location with Friends</string>
    <string-array name="setting_xml_spinner_defaultview_ary">
        <item>Map View</item>
        <item>Challenges View</item>
        <item>Main Menu View</item>
    </string-array>   
    
    <!-- challenge.xml -->
    <string name="challenge_xml_button_sort_by">Sort by</string>
    
    <!-- friend_list.xml -->
    <string-array name="friends_array">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
        <item>Six</item>
        <item>Seven</item>
        <item>Eight</item>
        <item>Nine</item>
        <item>Ten</item>
        <item>Eleven</item>
        <item>Twelve</item>
        <item>Thirteen</item>
        <item>Fourteen</item>
        <item>Fifteen</item>
        <item>Sixteen</item>
    </string-array>
    <string name="place_action_item_xml_string_pts">pts</string>
</resources>