<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background_selector"
    >

    <ImageView
        android:id="@+id/login_xml_imageview_logo_icon"
        android:layout_width="239px"
        android:layout_height="77px"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_0" />

		<EditText
			android:id="@+id/login_xml_edittext_email_id"
			android:singleLine="true"
			android:capitalize="none"
			android:layout_marginTop="10dp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login_xml_textview_email_str" >
			<requestFocus />
		</EditText>


		<EditText
			android:id="@+id/login_xml_edittext_password_id"
			android:singleLine="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/login_xml_textview_password_str" />


	    <TableLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >

        <TableRow android:gravity="center" >

        <TextView />

            <CheckBox
                android:id="@+id/login_xml_checkbox_remember_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_xml_checkbox_remember_password_str"
                android:textColor="#604d4d" />

        </TableRow>

        <TableRow android:gravity="center" >

            <TextView />

            <CheckBox
                android:id="@+id/login_xml_checkbox_visible_characters"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
				android:textColor="#604d4d"
                android:text="@string/login_xml_checkbox_visible_password_str" />
        
		</TableRow>

        <TableRow
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="100dp">
        </TableRow>

        <TableRow android:gravity="center" >

            <TextView />
            <Button
                android:id="@+id/login_xml_button_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_xml_button_login_str" />
        </TableRow>

        <TableRow android:gravity="center" >

            <TextView />
            <Button 
                android:id="@+id/login_xml_button_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_xml_button_signup_str"/>
        </TableRow>

        <TableRow >
            <TextView />
        </TableRow>

        <TableRow >
            <TextView />
        </TableRow>
    </TableLayout>
    
    <TextView
        android:gravity="center"
	    android:text="@string/login_xml_textview_version_str"
	    android:textColor="#A61C1C"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:textStyle="bold" />

</LinearLayout>